# create_your_own_python_package

./: CONTRIBUTING.md  README.md
example_package/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
example_package/.github/workflows/: ci.yml
example_package/src/example_package/: __init__.py  calculator.py
example_package/src/example_package/core/: __init__.py  data_processor.py
example_package/tests/: test_calculator.py  test_data_processor.py  test_init.py
